# site-builder

./: README.md  pyproject.toml  site.db
.github/workflows/: checks.yml
posts/: post1.md  post2.md
site_builder/: __main__.py  cli.py  markdown.py
tests/: tests.py
